--- a/views/index.slim
+++ b/views/index.slim
@@ -1,5 +1,7 @@
 ul
   li
-    a href="/enqueue" Submit a sim job
+    a href="/queue/add" Submit a sim job
   li
-    a href="/jobs" See list of jobs
+    a href="/queue/list" Queued sims
+  li
+    a href="/result/list" Sim Results
