--- a/views/queue_add.slim
+++ b/views/queue_add.slim
@@ -1,8 +1,8 @@
-form action="/enqueue" method="post"
+form action="/queue/add" method="post"
   div class="row"
     div class="six columns"
       label for="your_deck" Your Deck
-      input type="text" name="your_deck" class="u-full-width"
+      input type="text" name="your_deck" class="u-full-width" placeholder="Halcyon, Amon Matrix, Forged Rampart"
     div class="six columns"
       label for="enemy_deck" Enemy Deck
       input type="text" name="enemy_deck" class="u-full-width"
