Use sqlite for jobs

--- a/views/index.slim
+++ b/views/index.slim
@@ -1,7 +1,7 @@
 ul
   li
-    a href="/queue/add" Submit a sim job
+    a href="/job/create" Submit a sim job
   li
-    a href="/queue/list" Queued sims
+    a href="/job/queued/list" Queued sims
   li
-    a href="/result/list" Sim Results
+    a href="/job/completed/list" Sim Results
