--- a/views/layout.slim
+++ b/views/layout.slim
@@ -14,10 +14,10 @@ html lang="en"
     div class="nav"
       ul
         li
-          a href="/queue/add" Submit a sim job
+          a href="/job/create" Submit a sim job
         li
-          a href="/queue/list" Queued sims
+          a href="/job/queued/list" Queued sims
         li
-          a href="/result/list" Sim Results
+          a href="/job/completed/list" Sim Results
     div class="container"
       == yield
