--- a/views/create.slim
+++ b/views/create.slim
@@ -1,7 +1,10 @@
 form action="/job/create" method="post"
+  label for="username" Username
+  input type="text" name="username" class="u-full-width"
+  
   div class="row"
     label for="your_deck" Your Deck
-    input type="text" name="your_deck" class="u-full-width" placeholder="Halcyon, Amon Matrix, Forged Rampart"
+    input type="text" name="your_deck" class="u-full-width" placeholder="ex. Halcyon, Amon Matrix, Forged Rampart"
 
     label for="enemy_deck" Enemy Deck
     select name="enemy_deck"
@@ -14,6 +17,7 @@ form action="/job/create" method="post"
       option value="Protomech Mutant" Protomech Mutant
       option value="Razogoth Mutant" Razogoth Mutant
       option value="Serapherus Mutant" Serapherus Mutant
+      option value="Shot the Sheriff" Shot the Sheriff
       option value="Steel Mutant" Steel Mutant
       option value="Supremacy Mutant" Supremacy Mutant
       option value="Tyr Cannon Mutant" Tyr Cannon Mutant
@@ -34,12 +38,9 @@ form action="/job/create" method="post"
     div class="four columns"
       label for="cmd_count" Count
       select class="u-full-width" name="cmd_count"
-        option value="1000" 1,000
         option value="10000" 10,000
-        option value="100000" 100,000
     div class="four columns"
       label for="fund" SP Fund (for suggesting fusions)
       input class="u-full-width" type="text" name="fund" placeholder="1200"
 
   input type="submit" name="enqueue" value="Submit"
-  input type="hidden" name="username" value="ctn"
