defense gauntlet and dracorex's deception mission

--- a/views/create.slim
+++ b/views/create.slim
@@ -20,8 +20,10 @@ form action="/job/create" method="post" enctype="multipart/form-data"
     div class="four columns"
       label for="enemy_deck" Enemy Deck
       select name="enemy_deck"
-        option value="LV24BRACT" Level 24 Gauntlet
+        option value="LV24BRACT" Level 24 Gauntlet (Attack)
+        option value="LV24BRDEF" Level 24 Gauntlet (Defense)
         option value="Albatross Mutant" Albatross Mutant
+        option value="Dracorex's Deception" Dracorex's Deception
         option value="Excelsitus Mutant" Excelsitus Mutant
         option value="Iron Mutant" Iron Mutant
         option value="Miasma Mutant" Miasma Mutant
