show list of all sims, rather than have a queued and completed list separate

--- a/views/index.slim
+++ b/views/index.slim
@@ -2,6 +2,4 @@ ul
   li
     a href="/job/create" Submit a sim job
   li
-    a href="/job/queued/list" Queued sims
-  li
-    a href="/job/completed/list" Sim Results
+    a href="/job/list" All sims
