--- a/views/layout.slim
+++ b/views/layout.slim
@@ -16,8 +16,6 @@ html lang="en"
         li
           a href="/job/create" Submit a sim job
         li
-          a href="/job/queued/list" Queued sims
-        li
-          a href="/job/completed/list" Sim Results
+          a href="/job/list" All Sims 
     div class="container"
       == yield
