--- a/views/create.slim
+++ b/views/create.slim
@@ -11,6 +11,8 @@ form action="/job/create" method="post" enctype="multipart/form-data"
     div class="six columns"
       label for="your_deck" Your Deck
       input type="text" name="your_deck" class="u-full-width" placeholder="ex. Halcyon, Amon Matrix, Forged Rampart"
+      label for="ordered" Ordered
+      input type="checkbox" name="ordered"
 
     div class="six columns"
       label for="your_structs" Your Structures (comma-separated)
