--- a/views/index.slim
+++ b/views/index.slim
@@ -1,5 +1,7 @@
 ul
   li
-    a href="/job/create" Submit a sim job
+    a href="/job/simple_job" New Quick Sim
+  li
+    a href="/job/create" New Manual Sim
   li
     a href="/job/list" All sims
