--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,13 +8,19 @@ html lang="en"
     link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"
     link rel="stylesheet" href="/css/normalize.css"
     link rel="stylesheet" href="/css/skeleton.css"
+    link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css" media="screen"
     link rel="stylesheet" href="/css/custom.css"
-    link rel="icon" href="/images/favicon.png" type="image/png"
   body
     div class="nav"
       ul
         li
-          a href="/job/create" Submit a sim job
+          a href="/job/simple_job"
+            i class="fa fa-plus"
+            span  New Quick Sim
+        li
+          a href="/job/create"
+            i class="fa fa-plus"
+            span  New Manual Sim
         li
           a href="/job/list" All Sims 
     div class="container"
