--- a/views/job.slim
+++ b/views/job.slim
@@ -4,12 +4,13 @@
 - else
 
   h3= "#{@job.user} #{@job.name}"
+  h4= @job.status
   ul
     - if @job.output && !@job.output.empty?
       li
         pre== @job.output.split("\n").last.gsub(/[:,]/, '<br/>')
     li= "Queue Time: #{@job.created_at}"
     li= "Command: #{@job.command}"
-  
+
   h3 Output
   pre== @job.output
