--- a/views/index.slim
+++ b/views/index.slim
@@ -2,6 +2,8 @@ ul
   li
     a href="/job/simple_job" New Quick Sim
   li
+    a href="/job/raid_job" New Raid Sim
+  li
     a href="/job/create" New Manual Sim
   li
     a href="/job/list" All sims
