Add raid job to header

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -18,10 +18,14 @@ html lang="en"
             i class="fa fa-plus"
             span  New Quick Sim
         li
+          a href="/job/raid_job"
+            i class="fa fa-plus"
+            span  New Raid Sim
+        li
           a href="/job/create"
             i class="fa fa-plus"
             span  New Manual Sim
         li
-          a href="/job/list" All Sims 
+          a href="/job/list" All Sims
     div class="container"
       == yield
