--- a/views/list.slim
+++ b/views/list.slim
@@ -1,10 +1,11 @@
 - if @jobs.empty?
   p No jobs queued
 - else
-  select onchange="this.form.submit()"
-    option value="" All Players
-    - @players.each do |player|
-      option value="#{player}"= player
+  form action="/job/list" method="get"
+    select name="player" onchange="this.form.submit()"
+      option value="" All Players
+      - @players.each do |player|
+        option selected=("selected" if player == @pf) value="#{player}"= player
   table
     thead
       tr
