remove update buttons for now

--- a/views/admin.slim
+++ b/views/admin.slim
@@ -3,10 +3,8 @@ div class="container"
     div class="three columns"
       div
         i "TUO updated at: xxxx"
-        button Update TUO
       div
-        i "Card list updated at: xxxx"
-        button Update cards.xml
+        i "Card list updated at: #{Date.today - 1}"
 
     div class="nine columns"
       h3 General SIMs
